# napari-segment-anything-2

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: test_and_deploy.yml
src/napari_segment_anything_2/: __init__.py  _widget.py  napari.yaml  sam2.py  utils.py
src/napari_segment_anything_2/_tests/: test_widget.py
